--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body \{\
 \}\
 \
 header \{\
-    background: url('images/header-bg.jpg') no-repeat center center/cover;\
+    background: url('images/header.jpg') no-repeat center center/cover;\
     color: white;\
     text-align: center;\
     padding: 3rem 0;\
