--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background: url('header.jpg') no-repeat center center/cover;
+    background: url('header-bg.jpg') no-repeat center center/cover;
     color: #fff;
     padding: 2rem 0;
     text-align: center;
