--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,10 @@ body {
 }
 
 header {
-    background: url('header.jpg') no-repeat center center/cover;
+    background-image: url('header.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: #fff;
     padding: 2rem 0;
     text-align: center;
