--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
     padding: 0;
     line-height: 1.6;
     background-color: #f4f4f4;
+    background-image: url('body.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 header {
