--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    color: #f4f4f4;
     background-image: url('body.jpg');
     background-size: cover;
     background-position: center;
